--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ task downloadOptimizedMod() {
 
 dependencies {
 	// To change the versions see the gradle.properties file
-	annotationProcessor "systems.manifold:manifold-preprocessor:${project.manifold_version}"
+	annotationProcessor "systems.manifold:manifold-preprocessor:+"
 	minecraft "com.mojang:minecraft:${minecraft_version}"
 	mappings "net.fabricmc:yarn:${yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${loader_version}"
