--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	loader_version=0.14.21
+	loader_version=0.16.2
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = svrutil
+	maven_group = com.lx862.svrutil
 	archives_base_name = svrutil
