--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,20 +15,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Validate gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
+        uses: gradle/actions/wrapper-validation@v3
       - name: Setup JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
+          java-version: 17
           distribution: 'temurin'
-          java-version: '17'
       - name: Make gradle wrapper executable
         run: chmod +x ./gradlew
       - name: Build
         run: ./gradlew build -PbuildVersion="${{ matrix.minecraft }}"
-      - name: Capture release artifacts
-        uses: actions/upload-artifact@v3
+      - name: Capture build artifacts
+        uses: actions/upload-artifact@v4
         with:
           name: Artifacts
           path: build/libs/
