--- a/build.gradle
+++ b/build.gradle
@@ -2,26 +2,13 @@ import groovy.json.JsonSlurper
 plugins {
 	id 'fabric-loom' version '1.7-SNAPSHOT'
 	id 'maven-publish'
-	id "de.undercouch.download" version "4.1.2"
 }
 
 sourceCompatibility = JavaVersion.VERSION_16
 targetCompatibility = JavaVersion.VERSION_16
 
 group = project.maven_group
-
-def default_minecraft_version = "1.19.2"
-def minecraft_version = project.properties.containsKey("buildVersion") ? project.getProperties().get("buildVersion") : default_minecraft_version
-def minecraft_major_version = minecraft_version.split("\\.")[0] as int // Always return 1, unless mojang goes haywire :P
-def minecraft_main_version = minecraft_version.split("\\.")[1] as int
-def mc_requirement = "${minecraft_major_version}.${minecraft_main_version}.x"
-def minecraft_minor_version = minecraft_version.split("\\.").size() > 2 ? minecraft_version.split("\\.")[2] as int : 0
-def minecraft_version_str = (minecraft_major_version as String) + (minecraft_main_version as String).padLeft(2, '0') + (minecraft_minor_version as String).padLeft(2, '0')
-def yarn_mappings = new JsonSlurper().parse(("https://meta.fabricmc.net/v2/versions/yarn/" + minecraft_version).toURL())[0]["version"]
-def loader_version = project.loader_version
-def fapi_version = getModrinthVersion("fabric", minecraft_version, "fabric-api");
-
-version = project.mod_version + "+" + minecraft_version
+version = project.mod_version + "+" + project.minecraft_version
 
 repositories {
 	// Add repositories to retrieve artifacts from in here.
@@ -34,24 +21,19 @@ repositories {
 dependencies {
 	// To change the versions see the gradle.properties file
 	annotationProcessor "systems.manifold:manifold-preprocessor:+"
-	minecraft "com.mojang:minecraft:${minecraft_version}"
-	mappings "net.fabricmc:yarn:${yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${loader_version}"
+	minecraft "com.mojang:minecraft:${project.minecraft_version}"
+	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${fapi_version}"
-
-	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
-	// You may need to force-disable transitiveness on them.
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 }
 
 processResources {
 	inputs.property "version", project.version
 
 	filesMatching("fabric.mod.json") {
-		expand (
-				"version": project.version,
-				"mc_version": mc_requirement)
+		expand ("version": project.version)
 	}
 }
 
@@ -62,12 +44,11 @@ tasks.withType(JavaCompile).configureEach {
 	// If Javadoc is generated, this must be specified in that task too.
 	it.options.encoding = "UTF-8"
 
-	// Minecraft 1.17 (21w19a) upwards uses Java 16.
+	// Minecraft 1.18 upwards uses Java 17.
 	def targetVersion = 17
 	if (JavaVersion.current().isJava9Compatible()) {
 		 it.options.release = targetVersion
 	}
-	options.compilerArgs += ['-Xplugin:Manifold', '-AMC_VERSION=' + minecraft_version_str]
 }
 
 java {
@@ -110,14 +91,4 @@ publishing {
 		afterEvaluate {
 		}
 	}
-}
-
-static def getModrinthVersion(loader, minecraftVersion, projectId) {
-	def versionsArray = new JsonSlurper().parse(("https://api.modrinth.com/v2/project/" + projectId + "/version").toURL())
-	for (def versionElement : versionsArray) {
-		if (versionElement["loaders"].contains(loader) && versionElement["game_versions"].contains(minecraftVersion)) {
-			return versionElement["version_number"]
-		}
-	}
-	return ""
 }
