--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
+	minecraft_version=1.19.2
+	yarn_mappings=1.19.2+build.28
 	loader_version=0.16.2
+	fabric_version=0.77.0+1.19.2
 
 # Mod Properties
 	mod_version = 1.0.0
