--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,6 @@ org.gradle.jvmargs=-Xmx1G
 	mod_version = 2.0.0
 	maven_group = com.lx862.svrutil
 	archives_base_name = svrutil
+
+# Dependencies
+	placeholder_api_version = 2.0.0-pre.1+1.19.2
