--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.19.2
-	yarn_mappings=1.19.2+build.28
+	minecraft_version=1.19.4
+	yarn_mappings=1.19.4+build.2
 	loader_version=0.16.9
-	fabric_version=0.77.0+1.19.2
+	fabric_version=0.87.2+1.19.4
 
 # Mod Properties
 	mod_version = 2.0.0
@@ -14,4 +14,4 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = svrutil
 
 # Dependencies
-	placeholder_api_version = 2.0.0-pre.1+1.19.2
+	placeholder_api_version = 2.1.0+1.19.4
