--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,4 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	fabric_version=0.97.2+1.20.4
-	placeholder_api_version = 2.1.3+1.20.1
+	placeholder_api_version = 2.4.0-pre.3+1.20.4
