--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.20.4
-	yarn_mappings=1.20.4+build.3
+	minecraft_version=1.21.1
+	yarn_mappings=1.21.1+build.3
 	loader_version=0.16.10
 
 # Mod Properties
@@ -13,5 +13,5 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = svrutil
 
 # Dependencies
-	fabric_version=0.97.2+1.20.4
-	placeholder_api_version = 2.4.0-pre.3+1.20.4
+	fabric_version=0.115.2+1.21.1
+	placeholder_api_version = 2.4.2+1.21
